adds batch structure
Signed-off-by: DylanGuedes <djmgguedes@gmail.com>