@@ -1,4 +1,3 @@
-// give the user a nice default project!
 lazy val root = (project in file(".")).
   settings(
     inThisBuild(List(
@@ -13,12 +12,12 @@ lazy val root = (project in file(".")).
     parallelExecution in Test := false,
     fork := true,
     coverageHighlighting := true,
-    javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled"),
     libraryDependencies ++= Seq(
       // Test your code PLEASE!!!
-      "org.scalatest" %% "scalatest" % "3.0.1" % "test",
-      "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
-      "com.holdenkarau" %% "spark-testing-base" % "2.2.0_0.7.2" % "test"),
+      "org.mongodb.spark" %% "mongo-spark-connector" % "2.2.0",
+      "org.scalatest" %% "scalatest" % "3.0.1",
+      "org.scalacheck" %% "scalacheck" % "1.13.4",
+      "com.holdenkarau" %% "spark-testing-base" % "2.2.0_0.7.2"),
     scalacOptions ++= Seq("-deprecation", "-unchecked"),
     pomIncludeRepository := { x => false },
     resolvers ++= Seq(
